--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset = "UTF-8">
   <title>Rock paper scissors</title>
-  <script src="javascript.js"></script>
+  <script src="script.js"></script>
 </head>
 <body>
     
